[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "ansys-units"
version = "0.5.dev0"
description = "Pythonic interface for units, unit systems, and unit conversions."
readme = "README.rst"
requires-python = ">=3.9,<4"
license = {file = "LICENSE"}
authors = [{name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"}]
maintainers = [{name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "importlib-metadata>=4.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
doc = [
    "ansys-sphinx-theme==1.3.2",
    "pdf2image==1.17.0",
    "quarto-cli==1.6.42",
    "matplotlib==3.10.1",
    "numpydoc==1.8.0",
    "Sphinx==7.4.7",
    "sphinx-copybutton==0.5.2",
    "sphinx-gallery==0.19.0",
    "sphinx-toggleprompt==0.6.0",
]
tests = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "pytest-mock==3.14.0",
    "pint==0.24.4",
]
lists = [
    "numpy==2.2.3",
]

[project.urls]
Source = "https://github.com/ansys/pyansys-units"
Issues = "https://github.com/ansys/pyansys-units/issues"
Documentation = "https://ansunits.docs.pyansys.com"
Releases = "https://github.com/ansys/pyansys-units/releases"

[tool.flit.module]
name = "ansys.units"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=ansys.units --cov-report html:.cov/html --cov-report xml:.cov/xml --cov-report term --durations 0 --show-capture=all"
markers = [
    "developer_only: tests that must not run on github",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 88
filter_files = "true"
known_first_party = ["ansys"]


[tool.docformatter]
in-place = true
exclude = [
    "tests/"
]
pre-summary-newline = true
wrap-descriptions = 88
wrap-summaries = 88


[tool.coverage.run]
source = ["ansys.units"]


[tool.coverage.report]
show_missing = true
