[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
# Check https://flit.readthedocs.io/en/latest/pyproject_toml.html for all available sections
name = "ansys-units"
version = "0.9.1"
description = "Pythonic interface for units, unit systems, and unit conversions."
readme = "README.rst"
requires-python = ">=3.10,<3.14"
license = {file = "LICENSE"}
authors = [{name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"}]
maintainers = [{name = "ANSYS, Inc.", email = "pyansys.core@ansys.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "importlib-metadata>=4.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
doc = [
    "ansys-sphinx-theme==1.6.3",
    "pdf2image==1.17.0",
    "quarto-cli==1.8.25",
    "matplotlib==3.10.7",
    "numpydoc==1.9.0",
    "Sphinx==7.4.7",
    "sphinx-copybutton==0.5.2",
    "sphinx-gallery==0.19.0",
    "sphinx-toggleprompt==0.6.0",
]
tests = [
    "numpy>=1.24,<3",
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "pytest-mock==3.15.1",
    "pint==0.24.4",
]
additional = [
    "numpy>=1.24,<3",
    "pydantic>=2.11.7",
    "pydantic_core>=2.33.2",
]
# getting versions of matplotlib and numpy that are compatible is hard so we have this for CI
ci_types = [
    "matplotlib==3.10.7",
    "pydantic>=2.11.7",
    "pydantic_core>=2.33.2",
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "pytest-mock==3.15.1",
    "pint==0.24.4",
    "black==24.10.0",
]

[project.urls]
Source = "https://github.com/ansys/pyansys-units"
Issues = "https://github.com/ansys/pyansys-units/issues"
Documentation = "https://units.docs.pyansys.com/"
Releases = "https://github.com/ansys/pyansys-units/releases"

[tool.flit.module]
name = "ansys.units"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=ansys.units --cov-report html:.cov/html --cov-report xml:.cov/xml --cov-report term --durations 0 --show-capture=all"
markers = [
    "developer_only: tests that must not run on github",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
force_sort_within_sections = true
line_length = 88
filter_files = "true"
known_first_party = ["ansys"]


[tool.docformatter]
in-place = true
exclude = [
    "tests/"
]
pre-summary-newline = true
wrap-descriptions = 88
wrap-summaries = 88


[tool.coverage.run]
source = ["ansys.units"]


[tool.coverage.report]
show_missing = true


[tool.bandit]
exclude_dirs = ["tests"]
skips = [
    "B101",
    "B105",
    "B106",
    "B110",
    "B112",
    "B301",
    "B307",
    "B310",
    "B311",
    "B314",
    "B403",
    "B404",
    "B405",
    "B602",
    "B603",
    "B604",
    "B607",
    ]

[tool.basedpyright]
reportUnknownMemberType = false
reportExplicitAny = false
reportPrivateUsage = false
reportUnusedCallResult = false
ignore = ["doc"]
